//
// Copyright 2018, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package spine.test.aggregate.command;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package="io.spine.test.aggregate.command";
option java_outer_classname = "AggregateCommandsProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

import "spine/core/event.proto";

import "spine/test/aggregate/project.proto";

message AggCreateProject {
    ProjectId project_id = 1;
    string name = 2;
}

message AggCreateProjectWithChildren {
    ProjectId project_id = 1;
    string name = 2;
    repeated ProjectId child_project_id = 3;
}

message AggStartProjectWithChildren {
    ProjectId project_id = 1;
}

message AggAddTask {
    ProjectId project_id = 1;
    Task task = 2;
}

message AggStartProject {
    ProjectId project_id = 1;
    repeated ProjectId child_project_id = 3;
}

message ImportEvents {
    ProjectId project_id = 1;
    repeated core.Event event = 2;
}

message AggPauseProject {
    ProjectId project_id = 1;
}

message AggCancelProject {
    ProjectId project_id = 1;
}
